# oldwotpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp  makefile
compiler/: main.py  outline.txt  passes.py
docs/: ops.md  ops_cheatsheet.md  spec.txt
impl/: make_ops.h  ops.h  stack_id.h
impl/ops/: bitshift.h  comparison.h  emit.h  functions.h  group_comparison.h  group_math.h  io.h  jump.h  logical.h  math.h  ops.h  other.h  push.h  rel_jump.h  stack_manipulation.h
scripts/: counter.wot  helloworld.wb  helloworld.wot  math.wot  string.wot  test.wot  uint32.wot
src/: constants.h  debugging.cpp  functions.cpp  functions.h  getch.h  globals.h  lexer.cpp  maps.h  parser.cpp  parser.h  preprocessor.cpp  readf.h  stack.cpp  structs.h  wpp.h
src/debugging/: debugging.cpp  debugging.h
src/functions/: functions.cpp  functions.h
src/lexer/: lexer.cpp  lexer.h
src/parser/: parser.cpp  parser.h
src/pre_functions/: pre_functions.cpp  pre_functions.h
src/preprocessor/: preprocessor.cpp  preprocessor.h
src/sanitizer/: sanitizer.cpp  sanitizer.h
src/stack/: stack.cpp  stack.h
stdlib/: STRING.wpp
tests/: fuck.wpp  hello_world.wpp  nested_funcs.wpp  test.wpp
vm/: CMakeLists.txt  main.cpp  read_file.h  types.h  wot.h
vm/object/: object.cpp  object.h
vm/ops/: emit.h  push.h
vm/stack/: stack.cpp  stack.h
vm/stack_group/: stack_group.cpp  stack_group.h
vm/vm/: vm.cpp  vm.h
wotpp/: core.h  utils.h
wotpp/object/: object.cpp  object.h
wotpp/stack/: stack.cpp  stack.h
wotpp/stack_group/: stack_group.cpp  stack_group.h
wotpp/utils/: read_file.h  types.h
wotpp/vm/: vm.cpp  vm.h
